# AAAAA-Techno-SIS_Profile_V1

./: .replit  app.py  pyproject.toml  requirements.txt
templates/: banner.html  footer.html  home.html  nav.html  scrollspy.html
